--- a/src/Pentagon.Extensions.Authorization/Pentagon.Extensions.Authorization.csproj
+++ b/src/Pentagon.Extensions.Authorization/Pentagon.Extensions.Authorization.csproj
@@ -3,18 +3,24 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Michal Pokorný</Authors>
-    <Company></Company>
     <Product>Pentagon.Extensions.Authorization</Product>
-    <Description>Class library providing general extensions and utility types for authorization tasks.</Description>
+    <Description>Class library for .NET. Provides extension logic for authorization.</Description>
     <Copyright>Copyright (c) Michal Pokorný. All Rights Reserved.</Copyright>
-    <Version>1.5.0</Version>
+    <Company />
+    <LangVersion>8.0</LangVersion>
     <PackageProjectUrl>https://github.com/Micle257/Pentagon.Extensions.Authorization</PackageProjectUrl>
-    <LangVersion>7.3</LangVersion>
+    <PackageTags>dotnet;library;authorization;</PackageTags>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\..\build\$(AssemblyName)\</OutputPath>
-    <DocumentationFile>..\..\build\$(AssemblyName)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <DefineConstants>RELEASE</DefineConstants>
+    <OutputPath>..\..\build\$(AssemblyName)\$(Version)\</OutputPath>
+    <DocumentationFile>..\..\build\$(AssemblyName)\$(Version)\$(AssemblyName).xml</DocumentationFile>
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -23,7 +29,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" PrivateAssets="All" />
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" PrivateAssets="All" />
+    <PackageReference Include="JetBrainsAnnotations.Fody" Version="2.14.0" PrivateAssets="All" />
   </ItemGroup>
   
 </Project>
